--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "it.niedermann.owncloud.notes"
         minSdkVersion 14
         targetSdkVersion 29
-        versionCode 81
-        versionName "2.10.3"
+        versionCode 2011000
+        versionName "2.11.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -34,8 +34,7 @@ android {
 }
 
 dependencies {
-    implementation "com.github.nextcloud:Android-SingleSignOn:0.5.0-rc3"
-    implementation 'com.github.stefan-niedermann:nextcloud-commons:0.0.2'
+    implementation "com.github.nextcloud:Android-SingleSignOn:0.5.0"
 
     implementation 'com.yydcdut:markdown-processor:0.1.3'
     implementation 'com.yydcdut:rxmarkdown-wrapper:0.1.3'
