Add build flavors
Signed-off-by: stefan-niedermann <info@niedermann.it>

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,9 +26,9 @@ jobs:
         with:
           java-version: 1.8
       - name: Build debug APK
-        run: bash ./gradlew assembleDebug --stacktrace
+        run: bash ./gradlew assembleDev --stacktrace
       - name: Upload APK
         uses: actions/upload-artifact@v1
         with:
           name: app
-          path: app/build/outputs/apk/debug/app-debug.apk
+          path: app/build/outputs/apk/dev/release/app-dev-release-unsigned.apk
