--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,12 +17,14 @@ android {
         versionName "2.11.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
     lintOptions {
         disable 'MissingTranslation'
         abortOnError false
@@ -30,6 +32,21 @@ android {
 
     viewBinding {
         enabled = true
+    }
+
+    flavorDimensions "version"
+
+    productFlavors {
+        fdroid {
+            dimension "version"
+        }
+        dev {
+            dimension "version"
+            applicationIdSuffix ".dev"
+        }
+        play {
+            dimension "version"
+        }
     }
 }
 
