--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v1
         with:
-          name: app
-          path: app/build/outputs/apk/dev/release/app-dev-release-unsigned.apk
+          name: app-dev-debug
+          path: app/build/outputs/apk/dev/release/app-dev-debug.apk
