--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,6 +2,13 @@ name: Android CI
 
 on: [push, pull_request]
 jobs:
+  validation:
+    name: Validate Gradle Wrapper
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: gradle/wrapper-validation-action@v1
+
   test:
     name: Run Unit Tests
     runs-on: ubuntu-18.04
