--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion '29.0.2'
+    buildToolsVersion '29.0.3'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -13,8 +13,8 @@ android {
         applicationId "it.niedermann.owncloud.notes"
         minSdkVersion 14
         targetSdkVersion 29
-        versionCode 2011003
-        versionName "2.11.3"
+        versionCode 2011004
+        versionName "2.11.4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -51,14 +51,18 @@ android {
 }
 
 dependencies {
+    // Nextcloud SSO
     implementation "com.github.nextcloud:Android-SingleSignOn:0.5.0"
 
+    // Markdown
     implementation 'com.yydcdut:markdown-processor:0.1.3'
     implementation 'com.yydcdut:rxmarkdown-wrapper:0.1.3'
 
+    // Glide
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 
+    // Android X
     implementation "androidx.appcompat:appcompat:1.1.0"
     implementation "androidx.fragment:fragment:1.2.3"
     implementation "androidx.preference:preference:1.1.0"
@@ -67,6 +71,7 @@ dependencies {
     implementation 'androidx.work:work-runtime:2.3.4'
     implementation "com.google.android.material:material:1.1.0"
 
+    // Testing
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'com.android.support:support-annotations:28.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
