--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,17 @@
         </activity>
 
         <activity
+            android:name=".android.activity.SelectNoteActivity"
+            android:label="@string/append_to_note">
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="text/*" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".android.activity.ExceptionActivity"
             android:label="@string/app_name" />
 
