#174 ➕ Allow to share into exiting note

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
         </activity>
 
         <activity
-            android:name=".android.activity.SelectNoteActivity"
+            android:name=".android.activity.AppendToNoteActivity"
             android:label="@string/append_to_note">
 
             <intent-filter>
