--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,12 @@
             android:label="@string/app_name" />
 
         <activity
+            android:name=".manageaccounts.ManageAccountsActivity"
+            android:label="@string/manage_accounts"
+            android:parentActivityName=".android.activity.NotesListViewActivity"
+            android:windowSoftInputMode="stateHidden" />
+
+        <activity
             android:name=".android.activity.PreferencesActivity"
             android:label="@string/action_settings"
             android:parentActivityName=".android.activity.NotesListViewActivity"
