--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,10 @@ dependencies {
     implementation 'androidx.work:work-runtime:2.3.4'
     implementation "com.google.android.material:material:1.1.0"
 
+    // Database
+    implementation "androidx.room:room-runtime:2.2.5"
+    annotationProcessor "androidx.room:room-compiler:2.2.5"
+
     // Testing
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'com.android.support:support-annotations:28.0.0'
