--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'androidx.work:work-runtime:2.4.0'
-    implementation "com.google.android.material:material:1.1.0"
+    implementation "com.google.android.material:material:1.3.0-alpha02"
 
     // Testing
     testImplementation 'junit:junit:4.13'
