--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,16 +56,16 @@ android {
 
 dependencies {
     // Nextcloud SSO
-    implementation "com.github.nextcloud:Android-SingleSignOn:0.5.1"
-
-    // Markdown
-    implementation 'com.yydcdut:markdown-processor:0.1.3'
-    implementation 'com.yydcdut:rxmarkdown-wrapper:0.1.3'
+    implementation "com.github.nextcloud:Android-SingleSignOn:0.5.3"
+    implementation 'com.github.stefan-niedermann.nextcloud-commons:sso-glide:0.0.3'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-    implementation project(path: ':glide-sso-integration')
+
+    // Markdown
+    implementation 'com.yydcdut:markdown-processor:0.1.3'
+    implementation 'com.yydcdut:rxmarkdown-wrapper:0.1.3'
 
     // Android X
     implementation "androidx.appcompat:appcompat:1.2.0"
