--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
         targetSdkVersion 29
         versionCode 2017001
         versionName "2.17.1"
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -57,7 +58,7 @@ android {
 dependencies {
     // Nextcloud SSO
     implementation "com.github.nextcloud:Android-SingleSignOn:0.5.3"
-    implementation 'com.github.stefan-niedermann.nextcloud-commons:sso-glide:0.0.3'
+    implementation 'com.github.stefan-niedermann.nextcloud-commons:sso-glide:0.0.5'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -75,6 +76,8 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'androidx.work:work-runtime:2.4.0'
     implementation "com.google.android.material:material:1.2.1"
+
+    implementation 'androidx.multidex:multidex:2.0.1'
 
     // Testing
     testImplementation 'junit:junit:4.13'
