--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,8 @@ android {
 dependencies {
     // Nextcloud SSO
     implementation "com.github.nextcloud:Android-SingleSignOn:0.5.3"
-    implementation 'com.github.stefan-niedermann.nextcloud-commons:sso-glide:0.0.5'
+    implementation 'com.github.stefan-niedermann.nextcloud-commons:sso-glide:0.0.7'
+    implementation 'com.github.stefan-niedermann:android-commons:0.0.4'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
