Ensure all instrumented tests are run

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,7 +31,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
-          script: ./gradlew connectDevDebugAndroidTest --stacktrace
+          script: ./gradlew connectAndroidTest --stacktrace
 
   codeql:
     name: CodeQL security scan
