--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,11 @@ dependencies {
 
     // Testing
     testImplementation 'junit:junit:4.13.1'
+    testImplementation 'org.json:json:20201115'
+    testImplementation 'org.mockito:mockito-core:3.6.0'
+    testImplementation "org.powermock:powermock-core:2.0.9"
+    testImplementation "org.powermock:powermock-module-junit4:2.0.9"
+    testImplementation "org.powermock:powermock-api-mockito2:2.0.9"
     androidTestImplementation 'com.android.support:support-annotations:28.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'androidx.test:runner:1.3.0'
