Add pfungstadt flavor

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,10 @@ android {
         play {
             dimension "version"
         }
+        pfungstadt {
+            dimension "version"
+            applicationIdSuffix ".pfungstadt"
+        }
     }
 }
 
