--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,6 @@
 # org.gradle.parallel=true
 android.enableJetifier=true
 android.useAndroidX=true
+
+# enable aggressive code shrinking
+android.enableR8.fullMode=true
