--- a/markdown/build.gradle
+++ b/markdown/build.gradle
@@ -61,4 +61,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation group: 'com.youbenzi', name: 'MDTool', version: '1.2.4'
 }
