--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,7 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:2.3.0"
 
     // Retrofit
+    //noinspection GradleDependency
     implementation 'com.squareup.retrofit2:retrofit:2.6.4'
 
     // Gson
