--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,6 @@ android {
     buildToolsVersion '30.0.3'
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
         coreLibraryDesugaringEnabled true
     }
 
@@ -71,8 +69,13 @@ android {
 }
 
 dependencies {
+    // Markdown
+    implementation project(path: ':markdown')
+
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+
     // Nextcloud SSO
-    implementation "com.github.nextcloud:Android-SingleSignOn:0.5.6"
+    implementation 'com.github.nextcloud:Android-SingleSignOn:0.5.6'
     implementation 'com.github.stefan-niedermann.nextcloud-commons:sso-glide:1.2.5'
     implementation 'com.github.stefan-niedermann.nextcloud-commons:exception:1.2.5'
     implementation 'com.github.stefan-niedermann:android-commons:0.2.0'
@@ -81,22 +84,19 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
-    // Markdown
-    implementation project(path: ':markdown')
-
     // Android X
-    implementation "androidx.appcompat:appcompat:1.3.0"
-    implementation "androidx.fragment:fragment:1.3.4"
-    implementation "androidx.preference:preference:1.1.1"
-    implementation "androidx.recyclerview:recyclerview:1.2.0"
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.fragment:fragment:1.3.4'
+    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'androidx.work:work-runtime:2.5.0'
-    implementation "com.google.android.material:material:1.3.0"
+    implementation 'com.google.android.material:material:1.3.0'
 
     // Database
-    implementation "androidx.room:room-runtime:2.3.0"
-    annotationProcessor "androidx.room:room-compiler:2.3.0"
+    implementation 'androidx.room:room-runtime:2.3.0'
+    annotationProcessor 'androidx.room:room-compiler:2.3.0'
 
     // Retrofit
     //noinspection GradleDependency
@@ -108,14 +108,11 @@ dependencies {
     // ReactiveX
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
 
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
-
     // Testing
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:3.10.0'
     testImplementation 'org.robolectric:robolectric:4.5.1'
     testImplementation 'androidx.test:core:1.3.0'
-    testImplementation 'androidx.test.ext:junit:1.1.2'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
