--- a/markdown/build.gradle
+++ b/markdown/build.gradle
@@ -15,15 +15,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
         coreLibraryDesugaringEnabled true
     }
-}
-
-ext {
-    markwonVersion = "4.6.2"
-    rxMarkdownVersion = "0.1.3"
 }
 
 dependencies {
@@ -31,10 +24,11 @@ dependencies {
     implementation 'com.github.stefan-niedermann:android-commons:0.2.0'
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation "androidx.lifecycle:lifecycle-livedata:2.3.1"
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.3.1'
 
     implementation 'org.jsoup:jsoup:1.13.1'
 
+    def markwonVersion = '4.6.2'
     implementation "io.noties.markwon:core:$markwonVersion"
     implementation "io.noties.markwon:editor:$markwonVersion"
     implementation "io.noties.markwon:ext-strikethrough:$markwonVersion"
@@ -49,15 +43,13 @@ dependencies {
     implementation("io.noties.markwon:syntax-highlight:$markwonVersion") {
         exclude group: 'org.jetbrains', module: 'annotations-java5'
     }
-    implementation("io.noties:prism4j:2.0.0") {
+    implementation('io.noties:prism4j:2.0.0') {
         exclude group: 'org.jetbrains', module: 'annotations-java5'
     }
-    annotationProcessor "io.noties:prism4j-bundler:2.0.0"
+    annotationProcessor 'io.noties:prism4j-bundler:2.0.0'
     implementation 'org.jetbrains:annotations:21.0.0'
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
