--- a/markdown/build.gradle
+++ b/markdown/build.gradle
@@ -17,6 +17,12 @@ android {
     compileOptions {
         coreLibraryDesugaringEnabled true
     }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources true
+        }
+    }
 }
 
 dependencies {
