Use multithreading for unit test execution
Signed-off-by: Stefan Niedermann <info@niedermann.it>

--- a/build.gradle
+++ b/build.gradle
@@ -21,3 +21,9 @@ allprojects {
         maven { url "https://jitpack.io" }
     }
 }
+
+subprojects {
+    tasks.withType(Test) {
+        maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
+    }
+}
