Use max cores - 1 for unit test execution
Signed-off-by: Stefan Niedermann <info@niedermann.it>

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,6 @@ allprojects {
 
 subprojects {
     tasks.withType(Test) {
-        maxParallelForks = Runtime.runtime.availableProcessors()
+        maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
     }
 }
