--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity
             android:name=".SplashscreenActivity"
             android:label="@string/app_name"
-            android:theme="@style/SplashTheme">
+            android:theme="@style/SplashTheme"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -37,7 +38,8 @@
 
         <activity
             android:name=".main.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:exported="false">
 
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
@@ -57,7 +59,8 @@
 
         <activity
             android:name=".AppendToNoteActivity"
-            android:label="@string/append_to_note">
+            android:label="@string/append_to_note"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
@@ -93,7 +96,8 @@
             android:label="@string/simple_edit"
             android:launchMode="singleTask"
             android:parentActivityName=".main.MainActivity"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden"
+            android:exported="true">
             <intent-filter android:label="@string/action_create">
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -120,13 +124,15 @@
             android:label="@string/simple_about"
             android:parentActivityName=".main.MainActivity" />
 
-        <activity android:name=".widget.singlenote.SingleNoteWidgetConfigurationActivity">
+        <activity android:name=".widget.singlenote.SingleNoteWidgetConfigurationActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".widget.notelist.NoteListWidgetConfigurationActivity">
+        <activity android:name=".widget.notelist.NoteListWidgetConfigurationActivity"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
@@ -135,7 +141,8 @@
 
         <receiver
             android:name=".widget.createnote.CreateNoteWidget"
-            android:label="@string/widget_create_note">
+            android:label="@string/widget_create_note"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
@@ -148,7 +155,8 @@
 
         <receiver
             android:name=".widget.singlenote.SingleNoteWidget"
-            android:label="@string/widget_single_note_title">
+            android:label="@string/widget_single_note_title"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
@@ -161,7 +169,8 @@
 
         <receiver
             android:name=".widget.notelist.NoteListWidget"
-            android:label="@string/widget_note_list_title">
+            android:label="@string/widget_note_list_title"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
@@ -185,7 +194,8 @@
             android:description="@string/action_create"
             android:icon="@drawable/ic_launcher_foreground_full"
             android:label="@string/action_create"
-            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
