--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ android {
         abortOnError false
         disable 'MissingTranslation'
     }
+    namespace 'it.niedermann.owncloud.notes'
 }
 
 dependencies {
