--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,25 +22,13 @@
         tools:targetApi="n">
 
         <activity
-            android:name=".SplashscreenActivity"
+            android:name=".main.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/SplashTheme"
+            android:theme="@style/Theme.App.Starting"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            <meta-data
-                android:name="android.app.shortcuts"
-                android:resource="@xml/shortcuts" />
-        </activity>
-
-        <activity
-            android:name=".main.MainActivity"
-            android:label="@string/app_name"
-            android:exported="false">
-
-            <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
 
@@ -60,7 +48,6 @@
             android:name=".AppendToNoteActivity"
             android:label="@string/append_to_note"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
