--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "it.niedermann.owncloud.notes"
         minSdkVersion 23
         targetSdkVersion 32
-        versionCode 3005000
-        versionName "3.5.0"
+        versionCode 3006000
+        versionName "3.6.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
@@ -80,10 +80,10 @@ dependencies {
 
     // Nextcloud SSO
     implementation 'com.github.nextcloud:Android-SingleSignOn:0.6.1'
-    implementation 'com.github.stefan-niedermann:android-commons:0.2.6'
-    implementation 'com.github.stefan-niedermann.nextcloud-commons:sso-glide:1.6.3'
-    implementation 'com.github.stefan-niedermann.nextcloud-commons:exception:1.6.3'
-    implementation('com.github.stefan-niedermann.nextcloud-commons:markdown:1.6.3') {
+    implementation 'com.github.stefan-niedermann:android-commons:0.2.7'
+    implementation 'com.github.stefan-niedermann.nextcloud-commons:sso-glide:1.6.4'
+    implementation 'com.github.stefan-niedermann.nextcloud-commons:exception:1.6.4'
+    implementation('com.github.stefan-niedermann.nextcloud-commons:markdown:1.6.4') {
         exclude group: 'org.jetbrains', module: 'annotations-java5'
     }
 
@@ -92,14 +92,15 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 
     // Android X
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'androidx.fragment:fragment:1.4.1'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'androidx.core:core-splashscreen:1.0.0'
+    implementation 'androidx.fragment:fragment:1.5.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.preference:preference:1.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'androidx.work:work-runtime:2.7.1'
-    implementation 'androidx.core:core-splashscreen:1.0.0'
     implementation 'com.google.android.material:material:1.6.1'
 
     // Database
