--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,6 +1,9 @@
 name: Android CI
 
-on: [push, pull_request]
+on:
+  pull_request:
+  push:
+    branches: [ main, stable-* ]
 
 permissions:
   contents: read
