--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.2'
 
     // Nextcloud SSO
+    implementation 'com.github.nextcloud:android-common:0.4.0'
     implementation 'com.github.nextcloud:Android-SingleSignOn:0.6.1'
     implementation 'com.github.stefan-niedermann:android-commons:0.2.9'
     implementation 'com.github.stefan-niedermann.nextcloud-commons:sso-glide:1.6.4'
