chore(build): Single constant for glide version
Prevents duplicate dependabot PRs

Signed-off-by: Álvaro Brey <alvaro.brey@nextcloud.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ android {
 }
 
 ext {
+    glideVersion = '4.15.0'
     roomVersion = "2.5.0"
 }
 
@@ -86,8 +87,8 @@ dependencies {
     }
 
     // Glide
-    implementation 'com.github.bumptech.glide:glide:4.15.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.0'
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
     // Android X
     implementation 'androidx.appcompat:appcompat:1.6.1'
