chore: Increment version with fastlane incrementVersion type:rc
Signed-off-by: Álvaro Brey <alvaro.brey@nextcloud.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "it.niedermann.owncloud.notes"
         minSdkVersion 23
         targetSdkVersion 33
-        versionCode 40000000
-        versionName "4.0.0 Alpha 1"
+        versionCode 40000051
+        versionName "4.0.0 RC1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
