--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext {
         kotlinVersion = '1.8.20'
+        commonsVersion = '1.7.0'
     }
     repositories {
         mavenCentral()
