--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,9 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
+android.nonTransitiveRClass=false
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx4096m
 # Default value: -Xmx10248m -XX:MaxPermSize=256m
