--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "it.niedermann.owncloud.notes"
         minSdkVersion 24
         targetSdkVersion 33
-        versionCode 40010000
-        versionName "4.1.0 Alpha1"
+        versionCode 40010051
+        versionName "4.1.0 RC1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
