TEMP: switch to AGP82 SSO build
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,7 +78,7 @@ dependencies {
 
     // Nextcloud SSO
     implementation 'com.github.nextcloud.android-common:ui:0.12.0'
-    implementation 'com.github.nextcloud:Android-SingleSignOn:0.8.1'
+    implementation 'com.github.nextcloud:Android-SingleSignOn:dcc995cd92'
     implementation 'com.github.stefan-niedermann:android-commons:0.2.9'
     implementation "com.github.stefan-niedermann.nextcloud-commons:sso-glide:$commonsVersion"
     implementation "com.github.stefan-niedermann.nextcloud-commons:exception:$commonsVersion"
