chore(deps): AGP 8, Java 17, Kotlin 1.9.22, SSO 1.0.0
Signed-off-by: Stefan Niedermann <info@niedermann.it>

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,6 +15,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.1
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          check-latest: true
+          cache: 'gradle'
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1
 
@@ -24,8 +30,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.1
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          check-latest: true
+          cache: 'gradle'
       - name: Lint
-        run: bash ./gradlew lintDevDebug --stacktrace
+        run: bash ./gradlew lintDevDebug --stacktrace --no-configuration-cache
 
   test:
     name: Unit tests
@@ -33,8 +45,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.1
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          check-latest: true
+          cache: 'gradle'
       - name: Unit tests
-        run: bash ./gradlew test --stacktrace
+        run: bash ./gradlew test --stacktrace --no-configuration-cache
 
   apk:
     name: Generate APK
@@ -42,8 +60,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.1
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          check-latest: true
+          cache: 'gradle'
       - name: Build debug APK
-        run: bash ./gradlew assembleDev --stacktrace
+        run: bash ./gradlew assembleDev --stacktrace --no-configuration-cache
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
