--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,18 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
-    compileSdkVersion 33
-
-    compileOptions {
-        coreLibraryDesugaringEnabled true
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
-    }
+    compileSdk 34
+    namespace 'it.niedermann.owncloud.notes'
 
     defaultConfig {
         applicationId "it.niedermann.owncloud.notes"
-        minSdkVersion 24
-        targetSdkVersion 33
+        minSdk 24
+        targetSdk 34
         versionCode 40020000
         versionName "4.2.0 Alpha1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -24,8 +19,19 @@ android {
         }
     }
 
+    compileOptions {
+        coreLibraryDesugaringEnabled true
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = '17'
+    }
+
     buildFeatures {
         viewBinding true
+        buildConfig true
     }
 
     buildTypes {
@@ -60,25 +66,25 @@ android {
             includeAndroidResources true
         }
     }
-    lint {
+
+    lintOptions {
         abortOnError false
         disable 'MissingTranslation'
     }
-    namespace 'it.niedermann.owncloud.notes'
 }
 
 ext {
     glideVersion = '4.16.0'
-    roomVersion = "2.5.1"
+    roomVersion = "2.6.1"
 }
 
 dependencies {
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
 
     // Nextcloud SSO
-    implementation 'com.github.nextcloud.android-common:ui:0.12.0'
-    implementation 'com.github.nextcloud:Android-SingleSignOn:0.8.1'
-    implementation 'com.github.stefan-niedermann:android-commons:0.2.9'
+    implementation 'com.github.nextcloud.android-common:ui:0.13.0'
+    implementation 'com.github.nextcloud:Android-SingleSignOn:1.0.0'
+    implementation 'com.github.stefan-niedermann:android-commons:0.4.0'
     implementation "com.github.stefan-niedermann.nextcloud-commons:sso-glide:$commonsVersion"
     implementation "com.github.stefan-niedermann.nextcloud-commons:exception:$commonsVersion"
     implementation("com.github.stefan-niedermann.nextcloud-commons:markdown:$commonsVersion") {
@@ -91,16 +97,16 @@ dependencies {
 
     // Android X
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.core:core-splashscreen:1.0.1'
-    implementation 'androidx.fragment:fragment:1.6.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
+    implementation 'androidx.fragment:fragment:1.6.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
     implementation 'androidx.preference:preference:1.2.1'
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
-    implementation 'androidx.work:work-runtime:2.8.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.work:work-runtime:2.9.0'
+    implementation 'com.google.android.material:material:1.11.0'
 
     // Database
     implementation "androidx.room:room-runtime:${roomVersion}"
