Add dependency checksums and signing key information
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8
+org.gradle.dependency.verification.console=verbose
 org.gradle.configuration-cache=true
 android.useAndroidX=true
