Add support for per-app language preference
See https://developer.android.com/guide/topics/resources/app-languages

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,10 @@ android {
         abortOnError false
         disable 'MissingTranslation'
     }
+
+    androidResources {
+            generateLocaleConfig true
+    }
 }
 
 ext {
